--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
 </head>
 <body>
     <header>
-        <h1>BIBLIOTECA CENTRAL</h1>
-        <p>A biblioteca da família! E agora digital!</p>
+        <div class="conteudo">
+            <div class="titulo">
+                <h1>Biblioteca Central</h1>
+                <p>A biblioteca da família! E agora <strong>DIGITAL</strong>!</p>
+                <button id="infos">Saiba Mais</button>
+            </div>
+            <div class="logo-area">
+                <img src="assets/images/logo.png" alt="Logo biblioteca central">
+            </div>
+        </div>
     </header>
     <div id="search-bar">
         <label for="isearch-bar">
