estilizei a section categorias

--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
             </div>
         </div>
     </header>
-    <div id="search-bar">
-        <label for="isearch-bar">
+    <main>
+        <div id="search-bar">
             <button id="search">
                 <i class="bi bi-search"> Pesquisar</i>
             </button>
-        </label>
-        <input type="text" name="search-bar" id="isearch-bar" placeholder="pesquise por categoria/título/autor/ano">
-    </div>
-    <main>
+            <input type="text" name="search-bar" id="isearch-bar" placeholder="pesquise por categoria/título/autor/ano">
+        </div>
         <section class="categorias">
-            <nav>
+            <div class="favoritos">
                 <a href="#" class="favoritados">
-                    Meus Favoritos <i class="bi bi-star"></i>
+                    Meus Favoritos <i class="bi bi-star-fill"></i>
                 </a>
+            </div>
+            <nav>
                 <a href="#" class="categoria">Ação</a>
                 <a href="#" class="categoria">Romance</a>
                 <a href="#" class="categoria">Comédia</a>
