estilizei o main completo

--- a/index.html
+++ b/index.html
@@ -47,21 +47,39 @@
             <h2>Destaques da semana</h2>
             <article>
                 <h3>Título do livro</h3>
-                <p>Autor: autor do livro, ano</p>
-                <p>Breve resumo sobre o livro</p>
-                <p>Se interessou? <a href="#">Clique aqui</a> para começar a ler, já!</p>
+                <div class="conteudo_livro">
+                    <p class="autor">Autor: autor do livro, ano</p>
+                    <p>Breve resumo sobre o livro, Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Qui quo doloribus, alias ipsam esse minus iure temporibus sint impedit officiis 
+                        doloremque sit nulla natus voluptate. Officiis minus ex corporis quos? Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Qui quo doloribus, alias ipsam esse minus iure temporibus sint impedit officiis 
+                        doloremque sit nulla natus voluptate. Officiis minus ex corporis quos?</p>
+                    <p class="interesse">Se interessou? <a href="#"><i class="bi bi-link-45deg"></i>Clique aqui</a> para começar a ler, já!</p>
+                </div>
             </article>
             <article>
                 <h3>Título do livro</h3>
-                <p>Autor: autor do livro, ano</p>
-                <p>Breve resumo sobre o livro</p>
-                <p>Se interessou? <a href="#">Clique aqui</a> para começar a ler, já!</p>
+                <div class="conteudo_livro">
+                    <p class="autor">Autor: autor do livro, ano</p>
+                    <p>Breve resumo sobre o livro, Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Qui quo doloribus, alias ipsam esse minus iure temporibus sint impedit officiis 
+                        doloremque sit nulla natus voluptate. Officiis minus ex corporis quos? Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Qui quo doloribus, alias ipsam esse minus iure temporibus sint impedit officiis 
+                        doloremque sit nulla natus voluptate. Officiis minus ex corporis quos?</p>
+                    <p class="interesse">Se interessou? <a href="#"><i class="bi bi-link-45deg"></i>Clique aqui</a> para começar a ler, já!</p>
+                </div>
             </article>
             <article>
                 <h3>Título do livro</h3>
-                <p>Autor: autor do livro, ano</p>
-                <p>Breve resumo sobre o livro</p>
-                <p>Se interessou? <a href="#">Clique aqui</a> para começar a ler, já!</p>
+                <div class="conteudo_livro">
+                    <p class="autor">Autor: autor do livro, ano</p>
+                    <p>Breve resumo sobre o livro, Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Qui quo doloribus, alias ipsam esse minus iure temporibus sint impedit officiis 
+                        doloremque sit nulla natus voluptate. Officiis minus ex corporis quos? Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Qui quo doloribus, alias ipsam esse minus iure temporibus sint impedit officiis 
+                        doloremque sit nulla natus voluptate. Officiis minus ex corporis quos?</p>
+                    <p class="interesse">Se interessou?<a href="#"><i class="bi bi-link-45deg"></i>Clique aqui</a> para começar a ler, já!</p>
+                </div>
             </article>
         </section>
     </main>
