--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
                 </a>
             </div>
             <nav>
-                <a href="#" class="categoria">Ação</a>
-                <a href="#" class="categoria">Romance</a>
-                <a href="#" class="categoria">Comédia</a>
-                <a href="#" class="categoria">Drama</a>
-                <a href="#" class="categoria">Suspense</a>
-                <a href="#" class="categoria">Terror</a>
+                <div class="tres-c">
+                    <a href="#" class="categoria">Ação</a>
+                    <a href="#" class="categoria">Romance</a>
+                    <a href="#" class="categoria">Comédia</a>
+                </div>
+                <div class="tres-uc">
+                    <a href="#" class="categoria">Drama</a>
+                    <a href="#" class="categoria">Suspense</a>
+                    <a href="#" class="categoria">Terror</a>
+                </div>
             </nav>
         </section>
         <section class="destaques">
@@ -85,30 +89,33 @@
     </main>
     <footer>
         <div class="address">
-            <p>
-                <address>
-                    Biblioteca Central
-                    Rua das Palmeiras, 1245 - Centro
-                    CEP: 04567-890 - São Paulo, SP
-                </address>
-            </p>
+            <pre>
+                Biblioteca Central
+                Rua das Palmeiras, 1245 - Centro
+                CEP: 04567-890 - São Paulo, SP
+            </pre>
         </div>
         <div class="contatos">
-            <div id="e-mail">
-                <a href="https://www.gmail.com" target="_blank">
-                    <i class="bi bi-envelope-at-fill"></i> <span>bibliotecacentral@gmail.com</span>
+            <ul>
+                <a href="https://instagram.com" target="_blank">
+                    <li style="--cor1: #fb3997; --cor2: #fecf12;">
+                        <span class="icon"><i class="bi bi-instagram"></i></span>
+                        <span class="text">Instagram</span>
+                    </li>
                 </a>
-            </div>
-            <div id="facebook">
-                <a href="https://www.facebook.com" target="_blank">
-                    <i class="bi bi-facebook"></i> <span>Facebook/bibliotecacentral</span>
+                <a href="https://facebook.com" target="_blank">
+                    <li style="--cor1: #09c5ff; --cor2: #0973dd;">
+                        <span class="icon"><i class="bi bi-facebook"></i></span>
+                        <span class="text">Facebook</span>
+                    </li>
                 </a>
-            </div>
-            <div id="twitter">
-                <a href="https://www.x.com" target="_blank">
-                    <i class="bi bi-twitter-x"></i> <span>X/bibliotecacentral</span>
+                <a href="https://x.com" target="_blank">
+                    <li style="--cor1: #1179e0; --cor2: #0b559f;">
+                        <span class="icon"><i class="bi bi-twitter"></i></span>
+                        <span class="text">Twitter</span>
+                    </li>
                 </a>
-            </div>
+            </ul>
         </div>
     </footer>
 </body>
